# tidalsim

./: .env  .gitignore  .gitmodules  Hacking.ipynb  Intervals.ipynb  Makefile  README.md  dump_spike_checkpoint  embench.patch  pc.py  perf.md  pyproject.toml  run_mypy.sh  run_pyright.sh  run_tests.py
benchmarks/: bench_spike_bb_extraction.py
gem5_scripts/: caches.py
notebooks/: Hacking.ipynb  Intervals.ipynb  Plotting.ipynb
pipecleaning/: .gitignore
pipecleaning/dcache_injection/: .gitignore  data_array.v  run.sh  tb.v  test.v
pipecleaning/dcache_injection/vlog/: data_array.v  tag_array.v
pipecleaning/tag_array_injection/: test.v
rocket/: rocket.py
tests/: test_bbv_embedding.py  test_cache_model.py  test_clustering.py  test_extrapolation.py  test_mtr.py  test_spike_bb_extraction.py  test_spike_ckpt.py  test_spike_log.py  test_util_cli.py  test_util_random.py
tidalsim/archive/: intervals.py  mtr.py  run_tests.py
tidalsim/bb/: common.py  elf.py  spike.py
tidalsim/bb_extraction/: spike.py
tidalsim/cache_model/: cache.py  mtr.py
tidalsim/modeling/: clustering.py  extrapolation.py  schemas.py
tidalsim/scripts/: analyze.py  bench_spike_bb_extraction.py  gen_cache_state.py  gen_ckpt.py  gen_ckpts.py  tidalsim.py
tidalsim/util/: cli.py  pickle.py  random.py  spike_ckpt.py  spike_log.py
