[tool.poetry]
name = "tidalsim"
version = "0.1.0"
description = ""
authors = ["Vighnesh Iyer <vighnesh.iyer@berkeley.edu>"]
readme = "README.md"
packages = [
    {include = "tidalsim"}
]

[tool.poetry.scripts]
gen-ckpt = "tidalsim.scripts.gen_ckpt:main"
tidalsim = "tidalsim.scripts.tidalsim:main"
analyze = "tidalsim.scripts.analyze:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
intervaltree = "^3.1.0"
tqdm = "^4.66.1"
numpy = "^1.26.1"
scikit-learn = "^1.3.2"
notebook = "^7.0.6"
matplotlib = "^3.8.1"
joblib = "^1.3.2"
more-itertools = "^10.1.0"
pandas = "^2.1.3"
pandera = {version="^0.17.2", extras=["mypy"]}

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
mypy = "^1.6.1"

[tool.mypy]
plugins = "pandera.mypy"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
