[tool.poetry]
name = "tidalsim"
version = "0.1.0"
description = ""
authors = ["Vighnesh Iyer <vighnesh.iyer@berkeley.edu>"]
readme = "README.md"
packages = [
    {include = "tidalsim"}
]

[tool.poetry.scripts]
gen-ckpt = "tidalsim.scripts.gen_ckpt:main"
gen-cache-state = "tidalsim.scripts.gen_cache_state:main"
tidalsim = "tidalsim.scripts.tidalsim:main"
analyze = "tidalsim.scripts.analyze:main"
bench-spike-bb-extraction = "tidalsim.scripts.bench_spike_bb_extraction:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
tqdm = "^4.66.1"
numpy = "^1.26.1"
scikit-learn = "^1.3.2"
notebook = "^7.0.6"
matplotlib = "^3.8.1"
joblib = "^1.3.2"
more-itertools = "^10.2.0"
pandas = "^2.2.0"
pandera = {version="^0.18.0"}
pyarrow = "^15.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pyright = "^1.1.350"
setuptools = "^69.1.0"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
exclude = ["tidalsim/archive/**"]
include = ["tidalsim", "tests"]
reportMissingImports = true
typeCheckingMode = "standard"

[tool.black]
line-length = 100
include = "tidalsim|tests"
extend-exclude = "tidalsim/archive/.*"
unstable = true
preview = true
